--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,26 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  box-sizing: border-box;
+  margin: 0 auto;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* container for both tabs Buy and Sell */
+.container {
+  display: flex;
+}
+
+/* style for buy tab */
+.buy {
+  background-color: green;
+  font-size: x-large;
+  color: white;
+  width: 50%;
+  display: table;
+}
+
+/* style for sell tab */
+
+.sell {
+  background-color: red;
+  font-size: x-large;
+  color: white;
 }
